tests/rosetta/out/C/add-a-variable-to-a-class-instance-at-runtime.error
cc: exit status 1
/tmp/add-a-variable-to-a-class-instance-at-runtime.c: In function ‘mochi_main’:
/tmp/add-a-variable-to-a-class-instance-at-runtime.c:114:37: error: ‘some_struct_t’ {aka ‘struct some_struct_t’} has no member named ‘runtime_fields’; did you mean ‘runtimeFields’?
  114 |   __auto_type ss = (some_struct_t){.runtime_fields = tmp1};
      |                                     ^~~~~~~~~~~~~~
      |                                     runtimeFields
/tmp/add-a-variable-to-a-class-instance-at-runtime.c:114:54: error: incompatible types when initializing type ‘int’ using type ‘map_string_int’
  114 |   __auto_type ss = (some_struct_t){.runtime_fields = tmp1};
      |                                                      ^~~~
/tmp/add-a-variable-to-a-class-instance-at-runtime.c:126:26: error: ‘ss’ undeclared (first use in this function)
  126 |     __auto_type fields = ss.runtime_fields;
      |                          ^~
/tmp/add-a-variable-to-a-class-instance-at-runtime.c:126:26: note: each undeclared identifier is reported only once for each function it appears in
/tmp/add-a-variable-to-a-class-instance-at-runtime.c:127:5: error: ‘fields’ undeclared (first use in this function)
  127 |     fields.data[name] = value;
      |     ^~~~~~
/tmp/add-a-variable-to-a-class-instance-at-runtime.c:135:13: error: expected ‘)’ before ‘in’
  135 |     if (name in ss.runtime_fields) {
      |        ~    ^~~
      |             )
/tmp/add-a-variable-to-a-class-instance-at-runtime.c:137:52: error: ‘value’ undeclared (first use in this function)
  137 |       char *tmp5 = concat_string("Its value is '", value);
      |                                                    ^~~~~
/tmp/add-a-variable-to-a-class-instance-at-runtime.c:140:7: warning: ‘return’ with no value, in function returning non-void
  140 |       return;
      |       ^~~~~~
/tmp/add-a-variable-to-a-class-instance-at-runtime.c:112:5: note: declared here
  112 | int mochi_main() {
      |     ^~~~~~~~~~
